--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -66,3 +66,25 @@ border-bottom: 2px solid #a83535;
   outline: none !important;
 }
 
+
+.overlay {
+   position: relative;
+   width: 100%;
+   height: 200px;
+   background-color: black;
+   top: 0;
+   left: 0;
+   opacity: .5;
+   border-radius:  10px 10px 0 0;
+   z-index: 999;
+   
+  }
+  
+  .img-portfolio{
+    position: absolute; 
+    width: 10%;
+    max-height: 200px;
+    /* object-fit: cover; */
+    border-radius:  10px 10px 0 0;
+    z-index: 1;
+ }
